--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "three": "^0.146.0",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@types/three": "^0.146.0"
   }
 }
