--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
-    "@types/three": "^0.146.0"
+    "@types/three": "^0.146.0",
+    "glslify-loader": "^2.0.0",
+    "raw-loader": "^4.0.2"
   }
 }
